--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "devDependencies": {
     "husky": "^7.0.2",
     "jest": "^27.2.0",
-    "pre-commit": "^1.2.2",
-    "pre-push": "^0.1.1"
+    "pre-commit": "^1.2.2"
   },
   "dependencies": {}
 }
