--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
     "jest": "^27.2.0",
     "pre-commit": "^1.2.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "pre-push": "^0.1.1"
+  }
 }
