--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "husky": "^7.0.2",
     "jest": "^27.2.0",
-    "pre-commit": "^1.2.2"
+    "pre-commit": "^1.2.2",
+    "husky": "^7.0.0"
   },
   "dependencies": {
     "pre-push": "^0.1.1"
